[metadata]
version = 0.0.10
name = wesgarlock-app

[options]
include_package_data = True
packages = find:

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*,venv*,local_settings*,management,node_modules,wsgi*
max-line-length = 120
max-complexity = 19

[isort]
atomic=true
combine_as_imports=false
indent=4
known_third_party=django,six
known_first_party=sandbox
known_standard_library=token,tokenize,enum,importlib
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations,node_modules,conftest.py,wsgi.py,venv,local_settings.py
not_skip=__init__.py
wrap_length=79
